Changed to double summy and implemented the check for bad quality of samples

--- a/UCBC 2024/Simulations/OpeningLead4S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead4S.ipynb
@@ -52,12 +52,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-1335000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1335000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-1700000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-1700000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -81,33 +85,27 @@
      "output_type": "stream",
      "text": [
       "Finding leads from neural network\n",
-      "Cx 0.413\n",
-      "HA 0.250\n",
-      "Dx 0.179\n",
-      "ST 0.138\n",
-      "Now generating 5000000 deals to find opening lead\n",
-      "sample_cards_auction, nsteps= 4\n",
-      "NS:  1.0 EW:  99.0 Auction:  ['PAD_START', 'PAD_START', 'PASS', '1S', 'PASS', '2H', 'PASS', '2N', 'PASS', '4S', 'PASS', 'PASS', 'PASS']\n",
-      "nesw_i 0\n",
-      "Player:  N Hand:  T.AKxx.QTxx.J9xx\n",
-      "HCP:  [[11.06  6.6  12.5 ]]\n",
-      "Shape:  [[4.03 5.06 1.97 1.87 2.56 2.63 3.99 3.83 4.83 1.68 3.22 3.26]]\n",
-      "Setting seed (Sampling)= 3948620766\n",
-      "sample_cards_vec generating 5000000\n",
-      "sample_cards_vec took 99.1\n",
-      "n_samples 1511211 matching bidding info\n",
-      "Samples after bidding filtering:  1  Threshold:  0.25\n",
+      "Cx 0.651\n",
+      "Hx 0.164\n",
+      "D8 0.162\n",
+      "Now generating 100000 deals to find opening lead\n",
+      "sample_cards_auction, nsteps= 3\n",
+      "NS:  1.0 EW:  99.0 Auction:  ['PASS', '1C', '1C', 'PASS', '3C', 'PASS', '4S', 'PASS', 'PASS', 'PASS']\n",
+      "nesw_i 3\n",
+      "Player:  W Hand:  x.J9xx.8xxx.J9xx\n",
+      "HCP:  [[ 8.65 12.27 14.84]]\n",
+      "Shape:  [[4.49 3.42 3.24 1.78 2.83 3.02 2.77 4.42 4.72 2.88 3.05 2.3 ]]\n",
+      "Setting seed (Sampling) from 4.J954.8632.J975: 588168504\n",
+      "sample_cards_vec generating 100000\n",
+      "sample_cards_vec took 1.97 Deals: 67838\n",
+      "n_samples 67838 matching bidding info\n",
+      "Samples after bidding filtering:  0  Threshold:  0.7\n",
+      "Only found 1 10\n",
       "Generated samples: 10  OK Quality False\n",
-      "Now simulate on 500 deals to find opening lead\n",
-      "Opening lead being examined:  C6 10\n",
-      "dds took 0.048\n",
-      "Opening lead being examined:  HA 10\n",
-      "dds took 0.014\n",
-      "Opening lead being examined:  D6 10\n",
-      "dds took 0.06603\n",
-      "Opening lead being examined:  ST 10\n",
-      "dds took 0.01697\n",
-      "Accepted samples for opening lead: 10\n"
+      "Now simulate on 200 deals to find opening lead\n",
+      "Opening lead being examined:  C7 10\n",
+      "dds took 0.05143\n",
+      "Opening lead being examined:  H5 10\n"
      ]
     },
     {
@@ -116,15 +114,29 @@
      "text": [
       "Loaded lib dds.dll\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dds took 0.1015\n",
+      "Opening lead being examined:  D8 10\n",
+      "dds took 0.068\n",
+      "False\n",
+      "CandidateCard(card=Cx, insta_score=0.6511, exp_tricks_sd=11.4, exp_tricks_dd=None, p_make_contract=0.1, exp_score_sd=None, exp_score_dd=None)\n",
+      "CandidateCard(card=Hx, insta_score=0.1635, exp_tricks_sd=11.3, exp_tricks_dd=None, p_make_contract=0.1, exp_score_sd=None, exp_score_dd=None)\n",
+      "CandidateCard(card=D8, insta_score=0.1624, exp_tricks_sd=11.4, exp_tricks_dd=None, p_make_contract=0.0, exp_score_sd=None, exp_score_dd=None)\n",
+      "Accepted samples for opening lead: 10\n"
+     ]
     }
    ],
    "source": [
-    "# Camrose 2024 Deal 70\n",
+    "# Camrose 2024 Deal 34\n",
     "# You are sitting North and you hold\n",
-    "hand = 'T.AK63.QT76.J962'\n",
+    "hand = '4.J954.8632.J975'\n",
     "\n",
     "# the auction goes:\n",
-    "auction = [\"PAD_START\", \"PAD_START\", \"PASS\", \"1S\", \"PASS\", \"2H\", \"PASS\", \"2N\", \"PASS\", \"4S\", \"PASS\", \"PASS\", \"PASS\"]\n",
+    "auction = [\"PASS\", \"1C\", \"1C\", \"PASS\", \"3C\", \"PASS\", \"4S\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
     "# what to lead?\n",
     "\n",
@@ -141,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "HA"
+       "C7"
       ]
      },
      "execution_count": 4,
@@ -172,21 +184,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'HA',\n",
-       "  'insta_score': 0.25,\n",
-       "  'expected_tricks_sd': 10.6,\n",
-       "  'p_make_contract': 0.0},\n",
-       " {'card': 'Cx',\n",
-       "  'insta_score': 0.413,\n",
-       "  'expected_tricks_sd': 10.7,\n",
-       "  'p_make_contract': 0.0},\n",
-       " {'card': 'Dx',\n",
-       "  'insta_score': 0.179,\n",
-       "  'expected_tricks_sd': 10.7,\n",
-       "  'p_make_contract': 0.0},\n",
-       " {'card': 'ST',\n",
-       "  'insta_score': 0.138,\n",
-       "  'expected_tricks_sd': 10.7,\n",
+       "[{'card': 'Cx',\n",
+       "  'insta_score': 0.651,\n",
+       "  'expected_tricks_sd': 11.4,\n",
+       "  'p_make_contract': 0.1},\n",
+       " {'card': 'Hx',\n",
+       "  'insta_score': 0.164,\n",
+       "  'expected_tricks_sd': 11.3,\n",
+       "  'p_make_contract': 0.1},\n",
+       " {'card': 'D8',\n",
+       "  'insta_score': 0.162,\n",
+       "  'expected_tricks_sd': 11.4,\n",
        "  'p_make_contract': 0.0}]"
       ]
      },
@@ -221,16 +229,16 @@
     {
      "data": {
       "text/plain": [
-       "['A98xx.QT9xx..A8x Jx.J8.J8xxxx.Qxx KQxxx.xx.AK9.KTx 0.25192',\n",
-       " 'AKxxx.QJ9xx..8xx J8.xx.A98xxx.Txx Q9xxx.T8.KJx.AKQ 0.24591',\n",
-       " 'A98xx.JT98x..AQx Kx.xx.J98xxx.Txx QJxxx.Qx.AKx.K8x 0.24540',\n",
-       " 'KJ8xx.QJ8xx..ATx 9x.9x.J9xxxx.Kxx AQxxx.Tx.AK8.Q8x 0.24063',\n",
-       " 'AQ9xxx.Q8xxx..Kx K.Tx.J9xxxx.Txxx J8xxx.J9.AK8.AQ8 0.24041',\n",
-       " 'AJ9xx.QJ8xx..Kxx Kx.T9.J98xxx.Txx Q8xxx.xx.AKx.AQ8 0.23983',\n",
-       " 'KQJ8xx.T8xxx..Ax x.J9.KJ98xx.Txxx A9xxx.Qx.Axx.KQ8 0.23709',\n",
-       " 'A9xxx.QJ98x..A8x K8.Tx.J8xxxx.Txx QJxxx.xx.AK9.KQx 0.23449',\n",
-       " 'KJ98xx.QJ98x..Kx x.Tx.AJ98xx.T8xx AQxxx.xx.Kxx.AQx 0.23405',\n",
-       " 'KJ8xxx.QJT9x..A8 x.xx.A98xxx.xxxx AQ9xx.8x.KJx.KQT 0.23311']"
+       "['x.J9xx.8xxx.J9xx T98xx.AKTxx.Tx.x KJx.Q8x.Axx.QTxx AQxx.x.KQJ9.AK8x 0.50025',\n",
+       " 'x.J9xx.8xxx.J9xx Qxx.Txx.AJ9x.xxx 98xx.Axx.Kxx.KQT AKJTx.KQ8.QT.A8x 0.49979',\n",
+       " 'x.J9xx.8xxx.J9xx K9xx.xx.QJTx.Q8x ATxx.Q8x.K9x.KTx QJ8x.AKTx.Ax.Axx 0.49978',\n",
+       " 'x.J9xx.8xxx.J9xx KTx.ATxx.QJTx.A8 9xxx.Q8x.AKx.KTx AQJ8x.Kx.9x.Qxxx 0.49976',\n",
+       " 'x.J9xx.8xxx.J9xx QJT8xx.ATxx.9x.Q K9.KQ8x.KJT.xxxx Axxx.x.AQxx.AKT8 0.49973',\n",
+       " 'x.J9xx.8xxx.J9xx AKx.AQ8x.J9xx.xx Qx.KTxx.KQx.QT8x JT98xxx.x.AT.AKx 0.49972',\n",
+       " 'x.J9xx.8xxx.J9xx 98xxx.AQTxx.Tx.Q JTx.K8x.KJx.AT8x AKQx.x.AQ9x.Kxxx 0.49971',\n",
+       " 'x.J9xx.8xxx.J9xx KT9xxx.Tx.JTxx.x Qx.Q8xx.KQx.KTxx AJ8x.AKx.A9.AQ8x 0.49970',\n",
+       " 'x.J9xx.8xxx.J9xx AJ98xx.ATx.QJ9.x KQ.Q8xx.Kxx.QTxx Txxx.Kx.ATx.AK8x 0.49970',\n",
+       " 'x.J9xx.8xxx.J9xx AJ9xxx.8.Jxx.K8x Qx.ATxx.QTx.Axxx KT8x.KQxx.AK9.QT 0.49970']"
       ]
      },
      "execution_count": 6,
