Implemented PIMC fro defgenders

--- a/UCBC 2024/Simulations/BiddingValidationDuringPlay.ipynb
+++ b/UCBC 2024/Simulations/BiddingValidationDuringPlay.ipynb
@@ -23,20 +23,20 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/archive/sayc/bidding-1494000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/archive/sayc_info/binfo-1494000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/lead_model_b/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/lead_model_b/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/lefty_model/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/dummy_model/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/righty_model/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/decl_model/decl-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/lefty_model/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/dummy_model/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/righty_model/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\..\\models/decl_model/decl-1000000\n"
      ]
     }
    ],
@@ -66,8 +66,8 @@
     "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
     "np.random.seed(42)\n",
     "\n",
-    "models = Models.from_conf(conf.load('../Conf/UCBC2024.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), False)  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('../../Src/config/SAYC PIMC trick5 Def.conf'),'..\\..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../../Src/config/SAYC PIMC trick5 Def.conf'), False)  # Load sampling strategies"
    ]
   },
   {
@@ -80,19 +80,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_bid_scores\n",
-      "[0.96]\n"
+      "[0.   0.5  0.11 0.01 0.08 0.13 0.   0.08 0.53 0.   0.07 0.   0.   0.12 0.08 0.24 0.   0.19 0.26]\n"
      ]
     }
    ],
    "source": [
-    "auction = [\"PASS\",\"1D\",\"PASS\",\"1H\",\"PASS\",\"1S\",\"X\",\"4S\",\"PASS\",\"PASS\",\"PASS\"]\n",
-    "hand_str = \"J8.QTxx.J9x.JT8x\"\n",
-    "hand = parse_hand_f(32)(hand_str).reshape(32)\n",
-    "hands = np.array([hand])\n",
+    "auction = [\"1D\",\"1S\",\"X\",\"PASS\",\"2D\",\"2S\",\"3D\",\"PASS\",\"PASS\",\"PASS\"]\n",
+    "\n",
+    "hand_str_list = [\n",
+    "    \"xx.Q.AKT8x.KJ98x\",\n",
+    "    \"xx.K9x.AKT8x.J9x\",\n",
+    "    \"xx.K9.AKT8x.J98x\",\n",
+    "    \"xx.KQ.AKT8x.JT9x\",\n",
+    "    \"xx.x.AKT8x.KJ98x\",\n",
+    "    \"xx.Kx.AKT8x.JT9x\",\n",
+    "    \"xx.Q9x.AKT8x.J9x\",\n",
+    "    \"xx.xx.AKT8x.KJ9x\",\n",
+    "    \"xx.Kxx.AKT8x.J9x\",\n",
+    "    \"xx.xx.AKT8x.J98x\",\n",
+    "    \"xx.9.AKT8x.KJ98x\",\n",
+    "    \"xx.Qx.AKT8x.KJ9x\",\n",
+    "    \"xx.9x.AKT8x.JT9x\",\n",
+    "    \"xx.Kx.AKT8x.J98x\",\n",
+    "    \"xx.x.AKT8x.KJT9x\",\n",
+    "    \"xx.KQx.AKT8x.J9x\",\n",
+    "    \"xx.Kx.AKT8x.KJ9x\",\n",
+    "    \"xx.KQ9.AKT8x.J9x\",\n",
+    "    \"xx.K.AKT8x.JT98x\"\n",
+    "]\n",
+    "\n",
+    "hands = np.array([parse_hand_f(32)(hand_str).reshape(32) for hand_str in hand_str_list])\n",
+    "\n",
     "hand_no = 0\n",
     "dealer = 0\n",
-    "scores = sampler.get_bid_scores(hand_no,dealer,auction,[True, True],hands, models)\n",
+    "scores = sampler.get_bid_scores(hand_no,dealer,auction,[True, False],hands, models)\n",
     "print(scores)"
    ]
   },
@@ -106,17 +127,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_bid_scores\n",
       "[0.]\n"
      ]
     }
    ],
    "source": [
-    "hand_str = \"Qxxx.8xx.AKxx.xx\"\n",
+    "hand_str = \"8.9xx.9x.KT8xxxx\"\n",
     "hand = parse_hand_f(32)(hand_str).reshape(32)\n",
     "hands = np.array([hand])\n",
-    "hand_no = 1\n",
-    "scores = sampler.get_bid_scores(hand_no,dealer,auction,[True, True],hands, models)\n",
+    "hand_no = 0\n",
+    "scores = sampler.get_bid_scores(hand_no,dealer,auction,[False, True],hands, models)\n",
     "print(scores)"
    ]
   },
@@ -130,8 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_bid_scores\n",
-      "[0.47]\n"
+      "[0.]\n"
      ]
     }
    ],
@@ -153,8 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_bid_scores\n",
-      "[0.04]\n"
+      "[0.05]\n"
      ]
     }
    ],
