--- a/UCBC 2024/Simulations/AnalyseBidding.ipynb
+++ b/UCBC 2024/Simulations/AnalyseBidding.ipynb
@@ -48,8 +48,8 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-1494000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-1494000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
@@ -66,13 +66,13 @@
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('../Conf/UCBC2024.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), False)  # Load sampling strategies\n"
+    "models = Models.from_conf(conf.load('../Conf/UCBC2024V2.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024V2.conf'), False)  # Load sampling strategies\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2940c18a",
    "metadata": {},
    "outputs": [],
@@ -80,16 +80,16 @@
     "# We specify all the information about a board\n",
     "\n",
     "dealer = 'E'\n",
-    "vuln = [True, True]  # fist element is NS, second element is EW\n",
-    "hands = [ 'JTx.AT8x.Ax.9xxx', 'A8.KQxx.KQJ8x.T8','xxxx.J9x.9xx.Kxx','KQ9x.xx.Txx.AQJx']\n",
-    "auction = ['1D', 'PASS','1S', 'PASS','1N', 'PASS','2N', 'PASS','3C', 'PASS','3D', 'PASS','3S', 'PASS','4D', 'PASS','4S', 'PASS','5D', 'PASS','5S', 'PASS','6D', 'PASS','6S', 'PASS','7D', 'PASS', 'PASS', 'PASS']\n",
+    "vuln = [False, False]  # first element is NS, second element is EW\n",
+    "hands = [ 'AJTx.KJxx.J9x.Ax','Q.A8xx.AQTxxx.Jx','9x.QT9x.xx.K98xx','K8xxxx.x.K8.QTxx']\n",
+    "auction = ['1D', 'PASS', '1S', 'PASS', '2D', 'PASS', '2S', 'PASS', 'PASS', 'PASS']\n",
     "\n",
     "card_by_card = CardByCard(dealer, vuln, hands, auction, [], models, sampler, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7ab0cce5",
    "metadata": {},
    "outputs": [
@@ -97,48 +97,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1D OK NN-value: 0.999\n",
+      "1D OK NN-value: 1.000\n",
       "PASS OK NN-value: 1.000\n",
-      "1S OK NN-value: 0.997\n",
+      "1S OK NN-value: 0.998\n",
+      "PASS Suggested bid from NN: CandidateBid(bid=X   , insta_score=0.4082, expected_score=140.00, adjust= 204)\n",
+      "PASS NN-values:CandidateBid(bid=PASS, insta_score=0.5884, expected_score=-38.00, adjust= 294)\n",
+      "2D OK NN-value: 0.990\n",
       "PASS OK NN-value: 1.000\n",
-      "1N OK NN-value: 1.000\n",
-      "PASS OK NN-value: 1.000\n",
-      "2N OK NN-value: 0.922\n",
-      "PASS OK NN-value: 1.000\n",
-      "3C Suggested bid from NN: CandidateBid(bid=3N  , insta_score=0.1744, expected_score=460.21, adjust=   9)\n",
-      "3C is not in the bids from the neural network\n",
-      "PASS OK NN-value: 1.000\n",
-      "3D Suggested bid from NN: CandidateBid(bid=3N  , insta_score=0.5063, expected_score=316.00, adjust= 253)\n",
-      "3D is not in the bids from the neural network\n",
-      "PASS OK NN-value: 1.000\n",
-      "3S Suggested bid from NN: CandidateBid(bid=3N  , insta_score=0.3856, expected_score=162.00, adjust= 193)\n",
-      "3S is not in the bids from the neural network\n",
-      "PASS OK NN-value: 1.000\n",
-      "4D Suggested bid from NN: CandidateBid(bid=3N  , insta_score=0.4076, expected_score=-20.00, adjust= 204)\n",
-      "4D is not in the bids from the neural network\n",
-      "PASS OK NN-value: 0.999\n",
-      "4S Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.5638, expected_score=130.00, adjust= 282)\n",
-      "4S is not in the bids from the neural network\n",
-      "PASS OK NN-value: 1.000\n",
-      "5D Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.8915, expected_score=-6.00, adjust= 446)\n",
-      "5D is not in the bids from the neural network\n",
-      "PASS OK NN-value: 0.994\n",
-      "5S Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.8365, expected_score=328.00, adjust= 418)\n",
-      "5S is not in the bids from the neural network\n",
-      "PASS OK NN-value: 1.000\n",
-      "6D Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.4671, expected_score=-230.00, adjust= 234)\n",
-      "6D is not in the bids from the neural network\n",
-      "PASS Suggested bid from NN: CandidateBid(bid=X   , insta_score=0.3222, expected_score=500.00, adjust= 161)\n",
-      "PASS NN-values:CandidateBid(bid=PASS, insta_score=0.6778, expected_score=200.00, adjust= 339)\n",
-      "6S Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.8080, expected_score=468.00, adjust= 404)\n",
-      "6S is not in the bids from the neural network\n",
-      "PASS OK NN-value: 1.000\n",
-      "7D Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.8004, expected_score=-320.00, adjust= 400)\n",
-      "7D is not in the bids from the neural network\n",
-      "PASS Suggested bid from NN: CandidateBid(bid=X   , insta_score=0.6983, expected_score=710.00, adjust= 349)\n",
-      "PASS NN-values:CandidateBid(bid=PASS, insta_score=0.3016, expected_score=270.00, adjust= 151)\n",
-      "PASS OK NN-value: 0.986\n",
-      "PASS OK NN-value: 0.999\n"
+      "2S OK NN-value: 0.970\n",
+      "PASS OK NN-value: 0.995\n",
+      "PASS OK NN-value: 0.862\n",
+      "PASS OK NN-value: 1.000\n"
      ]
     }
    ],
