--- a/UCBC 2024/Simulations/bidding_info.ipynb
+++ b/UCBC 2024/Simulations/bidding_info.ipynb
@@ -12,8 +12,8 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-3362000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-2082000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-1494000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-1494000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
@@ -45,52 +45,72 @@
     "\n",
     "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
     "np.random.seed(42)\n",
-    "models = Models.from_conf(conf.load('../Conf/UCBC2024.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), False)  # Load sampling strategies\n"
+    "models = Models.from_conf(conf.load('../Conf/UCBC2024V2.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024V2.conf'), False)  # Load sampling strategies\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_steps 2\n",
-      "auction_input ['1N', 'PASS', 'PASS', 'PASS']\n",
-      "[[[99.  1.  1. ...  0.  0.  0.]\n",
-      "  [99.  1.  1. ...  0.  0.  0.]\n",
-      "  [99.  1.  1. ...  0.  0.  0.]\n",
-      "  ...\n",
-      "  [99.  1.  1. ...  0.  0.  0.]\n",
-      "  [99.  1.  1. ...  0.  0.  0.]\n",
-      "  [99.  1.  1. ...  0.  0.  0.]]]\n"
+      "n_steps 4\n",
+      "[[[99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
+      "  [99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
+      "  [99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
+      "  [99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]]]\n"
      ]
     }
    ],
    "source": [
-    "auction = ['1N', 'PASS', 'PASS', 'PASS']\n",
-    "n_steps = binary.calculate_step_bidding_info(auction)\n",
+    "auction = [\"PAD_START\",\"PAD_START\",\"PAD_START\",'1D', \"PASS\", \"1S\", \"PASS\", \"2D\", \"PASS\", \"2S\", 'PASS', 'PASS', 'PASS']\n",
+    "n_steps = binary.calculate_step_bidding_info(auction, models)\n",
     "print(\"n_steps\", n_steps)\n",
     "nesw_i = 3\n",
-    "vuln = [True, True]\n",
-    "hand = binary.parse_hand_f(32)(\"J.32.KJ983.QJT74\")\n",
-    "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models.ns, models.ew, 4 if models.model_version == 2 else 3)\n",
+    "vuln = [False, False]\n",
+    "hand = binary.parse_hand_f(32)(\"96.QT97.72.K9862\")\n",
+    "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models)\n",
     "print(A)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_hcp:[[15.72 11.06  5.02]]\n"
+      "c_hcp:[[ 9.78 12.63 12.58]]\n"
      ]
     }
    ],
